feat: ensure QuestionRepositoryAdapter saves all questions and return